--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -35,6 +35,7 @@ endif::[]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
 ** xref:retail-formulas-intro.adoc[Retail Formulas]
+** xref:retail-image-pillars.adoc[Image Pillars]
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-mass-config.adoc[Mass Configuration]
 *** xref:retail-mass-config-yaml.adoc[Mass Configuration YAML Example]
@@ -55,7 +56,6 @@ endif::[]
 *** xref:containerized-saltboot.adoc[Retail Environment using Containerized Proxy]
 
 ** xref:retail-best-practices.adoc[Best Practices]
-** xref:retail-image-pillar.adoc[Image Pillar]
 ** xref:retail-next.adoc[What Next?]
 
 
