--- a/modules/retail/pages/retail-image-pillars.adoc
+++ b/modules/retail/pages/retail-image-pillars.adoc
@@ -1,13 +1,14 @@
-[[retail-image-pillar]]
-= Image Pillar
+[[retail-image-pillars]]
+= Image Pillars
 
 If the built image type is [literal]``PXE``, a {salt} pillar is also generated.
-Image pillars are stored in the database and the {salt} subsystem can access details about the generated image.
+
+Image pillars are stored in the database and {salt} subsystem can access details about the generated image.
 Details include where the image files are located and provided, image checksums, information needed for network boot, and more.
 
 The generated pillar is available to all connected clients.
 
-This is an example of Image Pillar:
+This is an example of image pillar:
 ----
 {
   "images": {
@@ -60,17 +61,14 @@ This is an example of Image Pillar:
 ----
 
 Under the [literal]``Images`` section, there is a specific image called [literal]``POS_Image_JeOS7`` with a version [literal]``7.1.0-1.`` 
-It provides various details
-such as the image URL for download, architecture, hash, size, synchronization information, image type (in this case, [literal]``PXE``), file system type,
-file name, and an inactive flag to exclude it from auto-selection. 
+It provides various details such as the image URL for download, architecture, hash, size, synchronization information, image type (in this case, [literal]``PXE``), file system type, file name, and an inactive flag to exclude it from auto-selection. 
 Additionally, it references the corresponding boot image named [literal]``POS_Image_JeOS7-7.1.0-1.``
 
 The [literal]``boot_images`` section contains information about the boot image [literal]``POS_Image_JeOS7-7.1.0-1.`` 
 It specifies the details about kernel and [path]``initrd``.
 
 Image pillar can be modified via API. 
-This example retrieves the image pillar for a given image ID, and changes the [literal]``Inactive`` flag to [literal]``True``
-and writes it back.
+This example retrieves the image pillar for a given image ID, and changes the [literal]``Inactive`` flag to [literal]``True`` and writes it back.
 
 ----
 #!/usr/bin/env python3
