Minor improvements for retail best practices.

--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -1,75 +1,64 @@
 [[retail-best-practices]]
-= Best Practices
+= Best practices
 
-== Deploying New Images
+== Deploying new images
 
 This file describes how to deploy a new image on selected terminals first, test it, and then deploy it to all terminals.
 
-The hardware type (HWTYPE) group is used for booting new terminals, while already deployed terminals can
-be moved to any group that provides the {saltboot} formula. 
-This flexibility allows for testing of new images
-or configurations. 
-To ensure a smooth deployment, follow these steps:
+The hardware type group [literal]``HWTYPE`` is used for booting new terminals, while already deployed terminals can be moved to any group that provides the {saltboot} formula. 
+This flexibility allows for testing of new images or configurations. 
 
-* Build New Image
+//To ensure a smooth deployment, follow these steps:
+.Procedure: Smooth image deployment
 
-  * Use Image Sync formula to synchronize the image to all Branch Servers
-
-* Create a Test Group
-
+. Build new image.
+    Use image synchronization formula to synchronize the image to all Branch Servers.
+. Create a test group.
   * Name the group, for example, [literal]``TEST:POSVendor-Terminal``. The name can be chosen freely.
-  * Add the {saltboot} formula to this group, replicating the configuration from the original HWTYPE group, except for the image version. Use the name and version of the new image.
-
-* Move Selected Terminals
-
+  * Add the {saltboot} formula to this group, replicating the configuration from the original [literal]``HWTYPE`` group, except for the image version. 
+    Use the name and version of the new image.
+. Move selected terminals.
   * Identify the terminals you want to test the new image on.
-  * Transfer these terminals from the group [literal]``HWTYPE:POSVendor-Terminal`` group to the newly created group [literal]``TEST:POSVendor-Terminal``. It is recommended to use System Set Manager for this task.
-
-* Reboot Terminals
-
-  * Power on the selected POS terminals. They should boot the new image.
-
-* Verify and Evaluate
-
+  * Transfer these terminals from the group [literal]``HWTYPE:POSVendor-Terminal`` group to the newly created group [literal]``TEST:POSVendor-Terminal``. 
+    It is recommended to use System Set Manager for this task.
+. Reboot terminals.
+  * Power on the selected POS terminals. 
+    They should boot the new image.
+. Verify and evaluate.
   * Monitor the terminals in the [literal]``TEST:POSVendor-Terminal`` group.
   * Check if the new image performs as expected and if there are any issues or errors encountered.
-
-* Update HWTYPE Group
-
+. Update [literal]``HWTYPE`` group.
   * Once you have confirmed that the new image works correctly, the [literal]``HWTYPE`` group can be updated.
   * Modify the image version in the [literal]``HWTYPE:POSVendor-Terminal`` group to match the tested and approved version.
   * This ensures that all other terminals receive the new image.
 
 
-=== Controlling Image Versions
+=== Controlling image versions
 
 By default, {saltboot} formula selects the specified image name and version or selects the highest one if the version is not specified.
 
-There are multiple methods to control the image version within the HWTYPE and TEST groups:
+There are multiple methods to control the image version within the [literal]``HWTYPE`` and [literal]``TEST``` groups:
 
-* Specify Exact Version
-
-  * In both the HWTYPE and TEST groups, specify explicitly the exact version of the image to be deployed.
+.Procedure: Image control
+. Specify exact version.
+  * In both the [literal]``HWTYPE`` and [literal]``TEST`` groups, specify explicitly the exact version of the image to be deployed.
   * Make sure that the specified image version is already synchronized.
-
-* Mark New Image as [literal]``Inactive``
-
-  * In the HWTYPE group, do not specify the image version.
+. Mark new image as [literal]``Inactive``.
+  * In the [literal]``HWTYPE`` group, do not specify the image version.
   * Mark the new image as [literal]``Inactive`` after building and before synchronizing it to Branch Server.
-  * The ``inactive` flag ensures, that the image is not auto-selected when the image version is not specified.
-  * After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the HWTYPE group.
-  * The [literal]``Inactive`` flag can be accessed through the API. For more information, see xref:retail-image-pillar.adoc[Image Pillar].
-
-*  Utilize [literal]``Freeze Image`` flag:
-
-  * In the HWTYPE group, omit the image version.
-  * Before synchronizing the new image, set the [literal]``Freeze Image`` flag in {saltboot} formula in HWTYPE group. This ensures that the already deployed terminals in this group will keep the old image.
-  * Synchronize and test the new image in the TEST group.
-  * Reset the [literal]``Freeze Image`` flag in HWTYPE group, so the terminals in this group will be updated to the new image too.
+  * The [literal]``inactive`` flag ensures, that the image is not auto-selected when the image version is not specified.
+  * After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the [literal]``HWTYPE`` group.
+  * The [literal]``Inactive`` flag can be accessed through the API. i
+    For more information, see xref:retail-image-pillars.adoc[].
+.  Utilize [literal]``Freeze Image`` flag.
+  * In the [literal]``HWTYPE`` group, omit the image version.
+  * Before synchronizing the new image, set the [literal]``Freeze Image`` flag in {saltboot} formula in [literal]``HWTYPE`` group. 
+  This ensures that the already deployed terminals in this group will keep the old image.
+  * Synchronize and test the new image in the [literal]``TEST`` group.
+  * Reset the [literal]``Freeze Image`` flag in [literal]``HWTYPE`` group, so the terminals in this group will be updated to the new image too.
 
 [WARNING]
 ====
-Do not use the whitelist in Image Sync formula to control which terminal boots which image. 
+Do not use the whitelist in Image Synchronization formula to control which terminal boots which image. 
 It does not provide the required granularity and does not work with containerized Branch Server.
 ====
-
