--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -9,7 +9,7 @@ The hardware type group (e.g [literal]``HWTYPE``) is used for booting new termin
 This flexibility allows for testing of new images or configurations. 
 
 //To ensure a smooth deployment, follow these steps:
-.Procedure: Smooth image deployment
+.Procedure: Dual group image deployment
 
 . Build new image.
     Use image synchronization formula to synchronize the image to all Branch Servers.
