--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -15,7 +15,7 @@ This flexibility allows for testing of new images or configurations.
     Use image synchronization formula to synchronize the image to all Branch Servers.
 . Create a test group.
   * Name the group, for example, [literal]``TEST:POSVendor-Terminal``. The name can be chosen freely.
-  * Add the {saltboot} formula to this group, replicating the configuration from the original [literal]``HWTYPE`` group, except for the image version. 
+  * Add the {saltboot} formula to this group from the original hardware type group. 
     Use the name and version of the new image.
 . Move selected terminals.
   * Identify the terminals you want to test the new image on.
