--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -37,25 +37,25 @@ This flexibility allows for testing of new images or configurations.
 
 By default, {saltboot} formula selects the specified image name and version or selects the highest one if the version is not specified.
 
-There are multiple methods to control the image version within the [literal]``HWTYPE`` and [literal]``TEST``` groups:
+There are multiple methods to control the image version within the [literal]``HWTYPE`` and [literal]``TEST`` groups:
 
-.Procedure: Image control
-. Specify exact version.
-  * In both the [literal]``HWTYPE`` and [literal]``TEST`` groups, specify explicitly the exact version of the image to be deployed.
-  * Make sure that the specified image version is already synchronized.
-. Mark new image as [literal]``Inactive``.
-  * In the [literal]``HWTYPE`` group, do not specify the image version.
-  * Mark the new image as [literal]``Inactive`` after building and before synchronizing it to Branch Server.
-  * The [literal]``inactive`` flag ensures, that the image is not auto-selected when the image version is not specified.
-  * After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the [literal]``HWTYPE`` group.
-  * The [literal]``Inactive`` flag can be accessed through the API. i
-    For more information, see xref:retail-image-pillars.adoc[].
-.  Utilize [literal]``Freeze Image`` flag.
-  * In the [literal]``HWTYPE`` group, omit the image version.
-  * Before synchronizing the new image, set the [literal]``Freeze Image`` flag in {saltboot} formula in [literal]``HWTYPE`` group. 
-  This ensures that the already deployed terminals in this group will keep the old image.
-  * Synchronize and test the new image in the [literal]``TEST`` group.
-  * Reset the [literal]``Freeze Image`` flag in [literal]``HWTYPE`` group, so the terminals in this group will be updated to the new image too.
+//.Procedure: Image control
+* Specify exact version.
+** In both the [literal]``HWTYPE`` and [literal]``TEST`` groups, specify explicitly the exact version of the image to be deployed.
+** Make sure that the specified image version is already synchronized.
+* Mark new image as [literal]``Inactive``.
+** In the [literal]``HWTYPE`` group, do not specify the image version.
+** Mark the new image as [literal]``Inactive`` after building and before synchronizing it to Branch Server.
+** The [literal]``inactive`` flag ensures, that the image is not auto-selected when the image version is not specified.
+** After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the [literal]``HWTYPE`` group.
+** The [literal]``Inactive`` flag can be accessed through the API. i
+   For more information, see xref:retail-image-pillars.adoc[].
+* Utilize [literal]``Freeze Image`` flag.
+** In the [literal]``HWTYPE`` group, omit the image version.
+** Before synchronizing the new image, set the [literal]``Freeze Image`` flag in {saltboot} formula in [literal]``HWTYPE`` group. 
+   This ensures that the already deployed terminals in this group will keep the old image.
+** Synchronize and test the new image in the [literal]``TEST`` group.
+** Reset the [literal]``Freeze Image`` flag in [literal]``HWTYPE`` group, so the terminals in this group will be updated to the new image too.
 
 [WARNING]
 ====
