--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -5,7 +5,7 @@
 
 This file describes how to deploy a new image on selected terminals first, test it, and then deploy it to all terminals.
 
-The hardware type group (e.g [literal]``HWTYPE``) is used for booting new terminals, while already deployed terminals can be moved to any group that provides the {saltboot} formula. 
+The hardware type group (i.e. [literal]``HWTYPE`` group) is used for booting new terminals, while already deployed terminals can be moved to any group that provides the {saltboot} formula. 
 This flexibility allows for testing of new images or configurations. 
 
 //To ensure a smooth deployment, follow these steps:
