--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -48,7 +48,7 @@ There are multiple methods to control the image version within the [literal]``HW
 ** Mark the new image as [literal]``Inactive`` after building and before synchronizing it to Branch Server.
 ** The [literal]``inactive`` flag ensures, that the image is not auto-selected when the image version is not specified.
 ** After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the [literal]``HWTYPE`` group.
-** The [literal]``Inactive`` flag can be accessed through the API. i
+** The [literal]``Inactive`` flag can be accessed through the API.
    For more information, see xref:retail-image-pillars.adoc[].
 * Utilize [literal]``Freeze Image`` flag.
 ** In the [literal]``HWTYPE`` group, omit the image version.
