--- a/modules/retail/pages/retail-best-practices.adoc
+++ b/modules/retail/pages/retail-best-practices.adoc
@@ -8,14 +8,14 @@ This file describes how to deploy a new image on selected terminals first, test 
 The hardware type group (i.e. [literal]``HWTYPE`` group) is used for booting new terminals, while already deployed terminals can be moved to any group that provides the {saltboot} formula. 
 This flexibility allows for testing of new images or configurations. 
 
-//To ensure a smooth deployment, follow these steps:
 .Procedure: Dual group image deployment
 
 . Build new image.
     Use image synchronization formula to synchronize the image to all Branch Servers.
 . Create a test group.
   * Name the group, for example, [literal]``TEST:POSVendor-Terminal``. The name can be chosen freely.
-  * Add the {saltboot} formula to this group from the original hardware type group. 
+  * Add the {saltboot} formula to this group. 
+    Use the same configuration as in the original hardware type group ([literal]``HWTYPE``), except for the image version. 
     Use the name and version of the new image.
 . Move selected terminals.
   * Identify the terminals you want to test the new image on.
@@ -46,7 +46,7 @@ There are multiple methods to control the image version within the [literal]``HW
 * Mark new image as [literal]``Inactive``.
 ** In the [literal]``HWTYPE`` group, do not specify the image version.
 ** Mark the new image as [literal]``Inactive`` after building and before synchronizing it to Branch Server.
-** The [literal]``inactive`` flag ensures, that the image is not auto-selected when the image version is not specified.
+** The [literal]``Inactive`` flag ensures, that the image is not auto-selected when the image version is not specified.
 ** After testing, remove the [literal]``Inactive`` flag so the image can be auto-selected in the [literal]``HWTYPE`` group.
 ** The [literal]``Inactive`` flag can be accessed through the API.
    For more information, see xref:retail-image-pillars.adoc[].
