backport43 - Add retail best practices.

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -35,6 +35,7 @@ endif::[]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
 ** xref:retail-formulas-intro.adoc[Retail Formulas]
+** xref:retail-image-pillars.adoc[Image Pillars]
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-mass-config.adoc[Mass Configuration]
 *** xref:retail-mass-config-yaml.adoc[Mass Configuration YAML Example]
@@ -53,6 +54,8 @@ endif::[]
 *** xref:dedicated-with-scripts.adoc[Dedicated terminal network configured using scripts]
 *** xref:shared-central-dns.adoc[Shared network with centralized DNS]
 *** xref:containerized-saltboot.adoc[Retail Environment using Containerized Proxy]
+
+** xref:retail-best-practices.adoc[Best Practices]
 ** xref:retail-next.adoc[What Next?]
 
 
