--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -1,5 +1,5 @@
 [[proxy-register]]
-= Proxy Registration
+= {productname} Proxy Registration
 
 Proxy systems are registered as {salt} clients using bootstrap script or {webui}.
 
@@ -22,8 +22,6 @@ uyuni-proxy-stable-leap-154
 ----
 +
 Instead of [systemitem]``uyuni-proxy-stable-leap-154`` you can also try [systemitem]``uyuni-proxy-devel-leap`` which is the current development version.
-+
-OM REMOVE: For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
 +
 [IMPORTANT]
 ====
