Added macro for Cobbler to avoid upper and lowercase inconistencies.

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -42,8 +42,8 @@ menu:clear-taskologs-default[]::
 Clears task engine (taskomatic) history data older than a specified number of days, depending on the job type, from the database.
 
 menu:cobbler-sync-default[]::
-Synchronizes distribution and profile data from {productname} to Cobbler.
-For more information about autoinstallation powered by Cobbler, see xref:client-configuration:autoinst-intro.adoc[].
+Synchronizes distribution and profile data from {productname} to {cobbler}.
+For more information about autoinstallation powered by {cobbler}, see xref:client-configuration:autoinst-intro.adoc[].
 
 menu:compare-configs-default[]::
 Compares configuration files as stored in configuration channels with the files stored on all configuration-enabled servers.
@@ -76,7 +76,7 @@ menu:kickstart-cleanup-default[]::
 Cleans up stale {kickstart} session data.
 
 menu:kickstartfile-sync-default[]::
-Generates Cobbler files corresponding to {kickstart} profiles created by the configuration wizard.
+Generates {cobbler} files corresponding to {kickstart} profiles created by the configuration wizard.
 
 menu:mgr-forward-registration-default[]::
 Synchronizes client registration data with {scc}.
