--- a/modules/administration/pages/troubleshooting/tshoot-bare-metal-systems.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bare-metal-systems.adoc
@@ -11,12 +11,12 @@ If a bare metal system on the network is not automatically added to the [guilabe
 * The DHCP server must be responding to DHCP requests during boot. Check the PXE boot messages to ensure that:
 ** the DHCP server is assigning the expected IP address
 ** the DHCP server is assigning the the {productname} server IP address as [option]``next-server`` for booting.
-* Ensure Cobbler is running, and that the Discovery feature is enabled.
+* Ensure {cobbler} is running, and that the Discovery feature is enabled.
 
-If you see a blue Cobbler menu shortly after booting, discovery has started.
+If you see a blue {cobbler} menu shortly after booting, discovery has started.
 If it does not complete successfully, temporarily disable automatic shutdown to help diagnose the problem. To disable automatic shutdown:
 
-. Select [option]``pxe-default-profile`` in the Cobbler menu with the arrow keys, and press the Tab key before the timer expires.
+. Select [option]``pxe-default-profile`` in the {cobbler} menu with the arrow keys, and press the Tab key before the timer expires.
 . Add the kernel boot parameter [option]``spacewalk-finally=running`` using the integrated editor, and press Enter to continue booting.
 . Enter a shell with the username [option]``root`` and password [option]``linux`` to continue debugging.
 
