--- a/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
@@ -23,7 +23,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [command]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
-To accomplish this, Cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
+To accomplish this, {cobbler} uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
 
 Due to its design, [command]``cobbler sync`` is not able to sync only the changed or recently added files.
 
@@ -99,7 +99,7 @@ tcpdump -i ethX -s 200 host <ip-address-of-susemanager> and not ssh
 * Adjust ethX to the respective network interface {productname} uses to communicate with the proxy.
 * At last, ssh communication will not be captured to reduce the number of packages even further.
 . Start a [command]``cobbler sync``.
-* To force a sync, delete the Cobbler json cache file first and then issue [command]``cobbler sync``:
+* To force a sync, delete the {cobbler} json cache file first and then issue [command]``cobbler sync``:
 +
 ----
 rm /var/lib/cobbler/pxe_cache.json
