--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -3,8 +3,8 @@
 
 For clients that are not yet registered to {productname}, and if network boot over PXE is not an option, a bootable CD-ROM or USB key can be used to install the system.
 
-One option to prepare such a removable medium is to use Cobbler.
-For information about using Cobbler to prepare an ISO image, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[Build an ISO Image With Cobbler].
+One option to prepare such a removable medium is to use {cobbler}.
+For information about using {cobbler} to prepare an ISO image, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[Build an ISO Image With {cobbler}].
 
 For {suse} systems, it is often recommended to prepare an ISO image using KIWI.
 For more information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-kiwi[Build a SUSE ISO Image With KIWI].
@@ -13,20 +13,20 @@ In all cases, you use the resulting image to burn a CD-ROM or prepare a USB key.
 
 
 [[build-iso-with-cobbler]]
-== Build an ISO Image With Cobbler
+== Build an ISO Image With {cobbler}
 
-Cobbler can create ISO boot images that contain a set of distributions, kernels, and a menu that works in a similar way to a PXE installation.
+{cobbler} can create ISO boot images that contain a set of distributions, kernels, and a menu that works in a similar way to a PXE installation.
 
 [NOTE]
 ====
-Building ISOs with Cobbler is not supported on {ibmz}.
+Building ISOs with {cobbler} is not supported on {ibmz}.
 ====
 
-In order to prepare an ISO image with Cobbler, you need to prepare a distribution and a profile, similar to using network boot over PXE.
+In order to prepare an ISO image with {cobbler}, you need to prepare a distribution and a profile, similar to using network boot over PXE.
 For information about creating a distribution, see xref:client-configuration:autoinst-distributions.adoc[Autoinstallable Distributions].
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
-The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
+The {cobbler} [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
 Specifying the distribution with [option]``--distro`` is mandatory when running [command]``buildiso`` command.
 
 ----
@@ -35,10 +35,10 @@ cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 
 [IMPORTANT]
 ====
-You must use distro and profile labels as listed by Cobbler, and not simply as shown in the UI.
+You must use distro and profile labels as listed by {cobbler}, and not simply as shown in the UI.
 ====
 
-To list the names of distributions and profiles stored by Cobbler, run the commands:
+To list the names of distributions and profiles stored by {cobbler}, run the commands:
 
 ----
 # cobbler distro list
@@ -80,7 +80,7 @@ For more information about KIWI, see http://doc.opensuse.org/projects/kiwi/doc/.
 
 
 [[build-iso-with-cobbler-rh]]
-== Build a Red Hat ISO Image With Cobbler
+== Build a Red Hat ISO Image With {cobbler}
 
 For more information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[].
 
