--- a/modules/client-configuration/pages/autoinst-intro.adoc
+++ b/modules/client-configuration/pages/autoinst-intro.adoc
@@ -41,11 +41,11 @@ Autoinstallation of {ubuntu} and {debian} clients is not supported.
 These operating systems must be installed manually.
 ====
 
-The autoinstallation features of {productname} are based on a software named Cobbler.
-For more information about Cobbler, see https://cobbler.readthedocs.io.
+The autoinstallation features of {productname} are based on a software named {cobbler}.
+For more information about {cobbler}, see https://cobbler.readthedocs.io.
 
 [NOTE]
 ====
-{suse} only supports Cobbler functions that are available in the {productname} {webui}, or through the {productname} API.
+{suse} only supports {cobbler} functions that are available in the {productname} {webui}, or through the {productname} API.
 Only supported features are documented here.
 ====
