--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -176,7 +176,7 @@ Parts of your installation file are replaced during the installation.
 Variables are replaced with single values, and code snippets are replaced with whole sections of text.
 Escaped symbols or sections are not replaced.
 
-A template engine called Cheetah allows Cobbler to do these replacements.
+A template engine called Cheetah allows {cobbler} to do these replacements.
 This mechanism allows you to reinstall large numbers of systems, without having to manually create profiles for each of them.
 
 You can create autoinstallation variables and code snippets within the {productname} {webui}.
@@ -239,7 +239,7 @@ Or, in {ay}:
 </init-scripts>
 ----
 
-The macro is parsed by Cobbler and substituted with the contents of the snippet.
+The macro is parsed by {cobbler} and substituted with the contents of the snippet.
 You can also store your own code snippets to use in autoinstallation files later on.
 Click btn:[Create Snippet] to create a new code snippet.
 
