--- a/modules/client-configuration/pages/autoinst-unattended.adoc
+++ b/modules/client-configuration/pages/autoinst-unattended.adoc
@@ -41,7 +41,7 @@ For more information on SSM, see xref:client-configuration:system-set-manager.ad
 .Procedure: Provision "Bootstrap" Type clients
 . In the {productname} {webui}, navigate to [guimenu]``Systems``, select the client to provision, and go to the menu:Provisioning[Autoinstallation] tab.
 . Select the {ay} profile to use, and click btn:[Create PXE installation configuration].
-  This option creates a system entry at Cobbler.
+  This option creates a system entry at {cobbler}.
 . Power on the client.
 
 The server uses TFTP to provision the new client, so the appropriate port and networks must be configured correctly for provisioning to be successful.
@@ -68,6 +68,6 @@ $ spacecmd api -- --args '["<name>", "<profile>", "", "", \
 . Power on the client.
   It boots from the network, and the correct profile is selected for installation.
 
-This command creates a system record at Cobbler.
+This command creates a system record at {cobbler}.
 You may also specify additional parameters, like kernel options, the IP address of the client, and its domain name.
 For more information, see the API documentation for [systemitem]``createSystemRecord call``.
