--- a/modules/client-configuration/pages/client-upgrades-lifecycle.adoc
+++ b/modules/client-configuration/pages/client-upgrades-lifecycle.adoc
@@ -101,12 +101,12 @@ When you have prepared the server for the upgrade, you can provision the clients
 
 
 For clients that are able to use PXE, the migration is automated as soon as you have provisioned them.
-For all other clients, you can use Cobbler to perform the upgrade.
+For all other clients, you can use {cobbler} to perform the upgrade.
 
 
 
-.Procedure: Using Cobbler to Upgrade Clients
-. At the command prompt, as root, check the available Cobbler profiles:
+.Procedure: Using {cobbler} to Upgrade Clients
+. At the command prompt, as root, check the available {cobbler} profiles:
 +
 
 ----
