--- a/modules/client-configuration/pages/power-management.adoc
+++ b/modules/client-configuration/pages/power-management.adoc
@@ -3,7 +3,7 @@
 
 You can power on, power off, and reboot clients using the {productname} {webui}.
 
-This feature uses either the IPMI or Redfish protocol and is managed using a Cobbler profile.
+This feature uses either the IPMI or Redfish protocol and is managed using a {cobbler} profile.
 The selected client must have a power management controller supporting one of these protocols.
 
 For Redfish, ensure you can establish a valid SSL connection between the client and the {productname} Server.
@@ -22,12 +22,12 @@ For more information about using the system set manager, see xref:client-configu
 
 
 
-== Power Management and Cobbler
+== Power Management and {cobbler}
 
-The first time you use a power management feature, a Cobbler system record is automatically created, if one does not yet exist for the client.
+The first time you use a power management feature, a {cobbler} system record is automatically created, if one does not yet exist for the client.
 These automatically created system records are not bootable from the network, and include a reference to a dummy system image.
-This is needed because Cobbler does not currently support system records without profiles or images.
+This is needed because {cobbler} does not currently support system records without profiles or images.
 
-Cobbler power management uses fence-agent tools to support protocols other than IPMI.
+{cobbler} power management uses fence-agent tools to support protocols other than IPMI.
 Only IPMI and Redfish protocols are supported by {productname}.
 You can configure your client to use other protocols by adding the fence-agent names as a comma-separated list to the [option]``java.power_management.types`` configuration parameter in the [path]``rhn.conf`` configuration files.
