--- a/modules/quickstart/pages/install-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/install-uyuni-proxy.adoc
@@ -260,15 +260,15 @@ configure-tftpsync.sh FQDN_of_Proxy
 cobbler sync
 ----
 +
-You can also synchronize after a change within Cobbler that needs to be synchronized immediately.
-Otherwise Cobbler synchronization will run automatically when needed.
+You can also synchronize after a change within {cobbler} that needs to be synchronized immediately.
+Otherwise {cobbler} synchronization will run automatically when needed.
 For more information about PXE booting, see xref:client-configuration:autoinst-pxeboot.adoc[Install via the Network].
 
 
 
 == Configure DHCP for PXE through Proxy
 
-{productname} uses Cobbler for client provisioning.
+{productname} uses {cobbler} for client provisioning.
 PXE (tftp) is installed and activated by default.
 Clients must be able to find the PXE boot on the {productname} Proxy using DHCP.
 Use this DHCP configuration for the zone which contains the clients to be provisioned:
