--- a/modules/reference/pages/systems/system-details/sd-provisioning.adoc
+++ b/modules/reference/pages/systems/system-details/sd-provisioning.adoc
@@ -21,7 +21,7 @@ For more information about autoinstallation, see xref:client-configuration:autoi
 
 This section allows you to power on, power off, and reboot the selected client.
 
-This feature uses either the IPMI or Redfish protocol and is managed using a Cobbler profile.
+This feature uses either the IPMI or Redfish protocol and is managed using a {cobbler} profile.
 The selected client must have a power management controller supporting one of these protocols.
 For Redfish, ensure you can establish a valid SSL connection between the client and the {productname} Server.
 
@@ -29,8 +29,8 @@ Complete the details for the power management server, and click the appropriate 
 Click btn:[Get status] to determine if the client is currently running.
 Click btn:[Save only] to save the details without taking any action.
 
-Click btn:[Remove Cobbler System Profile] to remove the current client's system profile from Cobbler.
-For more information about unattended provisioning with Cobbler, see xref:client-configuration:autoinst-unattended.adoc[].
+Click btn:[Remove Cobbler System Profile] to remove the current client's system profile from {cobbler}.
+For more information about unattended provisioning with {cobbler}, see xref:client-configuration:autoinst-unattended.adoc[].
 
 For more information about power management, see xref:client-configuration:power-management.adoc[].
 
