--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -151,10 +151,10 @@ profiles:
 These entries contain information about kernel and initrd.
 These entries are however not yet available for PXE booting.
 
-Only when [systemitem]``Saltboot group`` is created, new cobbler profile is created for this [systemitem]``Saltboot group`` which points to [systemitem]``cobbler distro`` based on default boot image configuration.
+Only when [systemitem]``Saltboot group`` is created, new {cobbler} profile is created for this [systemitem]``Saltboot group`` which points to [systemitem]``cobbler distro`` based on default boot image configuration.
 
 
-For example, when system group [literal]``B0001`` is created and [systemitem]``Saltboot group formula`` is assigned and configured for this group, new cobbler profile is created.
+For example, when system group [literal]``B0001`` is created and [systemitem]``Saltboot group formula`` is assigned and configured for this group, new {cobbler} profile is created.
 
 ----
 # cobbler list
