--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -124,7 +124,7 @@ The branch server must be configured as a Salt managed proxy.
 
 [NOTE]
 ====
-Cobbler TFTP is not supported on {productname} {smr}.
+{cobbler} TFTP is not supported on {productname} {smr}.
 Do not configure the [package]``susemanager-tftpsync-recv`` tool on the {productname} {smr} Branch Server.
 ====
 
