--- a/modules/specialized-guides/pages/salt/salt-scaling-minions.adoc
+++ b/modules/specialized-guides/pages/salt/salt-scaling-minions.adoc
@@ -165,7 +165,7 @@ To delete a job, click the name of the job you want to delete, and click  btn:[D
 We recommend disabling these jobs:
 
 * Daily comparison of configuration files: [systemitem]``compare-configs-default``
-* Hourly synchronization of Cobbler files: [systemitem]``cobbler-sync-default``
+* Hourly synchronization of {cobbler} files: [systemitem]``cobbler-sync-default``
 * Daily gatherer and subscription matcher: [systemitem]``gatherer-matcher-default``
 
 Do not attempt to disable any other jobs, as it could prevent {productname} from functioning correctly.
