--- a/modules/installation-and-upgrade/pages/proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-setup.adoc
@@ -157,16 +157,16 @@ cobbler sync
 ----
 +
 
-It can also be done after a change within Cobbler that needs to be synchronized immediately.
-Otherwise Cobbler synchronization will run automatically when needed.
-For more information about autoinstallation powered by Cobbler, xref:client-configuration:autoinst-intro.adoc[Operating System Installation].
+It can also be done after a change within {cobbler} that needs to be synchronized immediately.
+Otherwise {cobbler} synchronization will run automatically when needed.
+For more information about autoinstallation powered by {cobbler}, xref:client-configuration:autoinst-intro.adoc[Operating System Installation].
 
 
 
 [[proxy.pxe.dhcp]]
 === Configure DHCP for PXE through {productname} Proxy
 
-{productname} uses Cobbler for client provisioning.
+{productname} uses {cobbler} for client provisioning.
 PXE (tftp) is installed and activated by default.
 Clients must be able to find the PXE boot on the {productname} Proxy using DHCP.
 Use this DHCP configuration for the zone that contains the clients to be provisioned:
