--- a/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
@@ -181,8 +181,8 @@ cobbler sync
 ----
 +
 
-It can also be done after a change within Cobbler that needs to be synchronized immediately.
-Otherwise Cobbler synchronization will run automatically when needed.
+It can also be done after a change within {cobbler} that needs to be synchronized immediately.
+Otherwise {cobbler} synchronization will run automatically when needed.
 For more information about PXE booting, see xref:client-configuration:autoinst-pxeboot.adoc[Install via the Network].
 
 
@@ -190,7 +190,7 @@ For more information about PXE booting, see xref:client-configuration:autoinst-p
 [[proxy.pxe.dhcp]]
 === Configure DHCP for PXE through Proxy
 
-{productname} uses Cobbler for client provisioning.
+{productname} uses {cobbler} for client provisioning.
 PXE (tftp) is installed and activated by default.
 Clients must be able to find the PXE boot on the {productname} Proxy using DHCP.
 Use this DHCP configuration for the zone which contains the clients to be provisioned:
