--- a/modules/reference/pages/admin/cobbler.adoc
+++ b/modules/reference/pages/admin/cobbler.adoc
@@ -1,13 +1,13 @@
 [[ref-admin-cobbler]]
-= Cobbler
+= {cobbler}
 
-The menu:Admin[Manager Configuration > Cobbler] page allows you to run a Cobbler synchronization.
-You can repair or rebuild the contents of the [path]``/srv/tftpboot/`` and [path]``/srv/www/cobbler/`` directories after a manual modification of the Cobbler setup.
+The menu:Admin[Manager Configuration > Cobbler] page allows you to run a {cobbler} synchronization.
+You can repair or rebuild the contents of the [path]``/srv/tftpboot/`` and [path]``/srv/www/cobbler/`` directories after a manual modification of the {cobbler} setup.
 
-For more information about autoinstallation powered by Cobbler, see xref:client-configuration:autoinst-intro.adoc[].
+For more information about autoinstallation powered by {cobbler}, see xref:client-configuration:autoinst-intro.adoc[].
 
 [NOTE]
 ====
-{suse} only supports Cobbler functions that are available in the {productname} {webui}, or through the {productname} API.
+{suse} only supports {cobbler} functions that are available in the {productname} {webui}, or through the {productname} API.
 Only supported features are documented here.
 ====
