--- a/modules/reference/pages/admin/manager-configuration.adoc
+++ b/modules/reference/pages/admin/manager-configuration.adoc
@@ -12,7 +12,7 @@ The menu:Admin[Manager Configuration] section contains tabs to allow you to conf
 | Bootstrap Script   | Generate a custom bootstrap script.
 | Organizations      | Create and configure organizations and users.
 | Restart            | Restart {productname}. You will need to do this after making configuration changes.
-| Cobbler            | Run a Cobbler synchronization.
+| {cobbler}          | Run a {cobbler} synchronization.
 | Bare-metal systems | Allow bare metal clients to be provisioned in preparation for autoinstallation.
 | Monitoring         | Enable server monitoring.
 |===
