--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -134,7 +134,7 @@ Non-Containerized workflow:
 
 When new PXE image is built (such as {productname} {smr} POS_Image_JeOS images) [systemitem]``cobbler distro`` and [systemitem]``cobbler profile`` are automatically generated for this image.
 
-For example when first image [literal]``POS_Image_JeOS`` version [literal]``7.0.0`` is build under organization with number 1 cobbler list will show:
+For example when first image [literal]``POS_Image_JeOS`` version [literal]``7.0.0`` is build under organization with number 1 {cobbler} list will show:
 
 ----
 # cobbler list
@@ -149,10 +149,10 @@ profiles:
 These entries contain information about kernel and initrd.
 These entries are however not yet available for PXE booting.
 
-Only when [systemitem]``Saltboot group`` is created, new cobbler profile is created for this [systemitem]``Saltboot group`` which points to [systemitem]``cobbler distro`` based on default boot image configuration.
+Only when [systemitem]``Saltboot group`` is created, new {cobbler} profile is created for this [systemitem]``Saltboot group`` which points to [systemitem]``cobbler distro`` based on default boot image configuration.
 
 
-For example, when system group [literal]``B0001`` is created and [systemitem]``Saltboot group formula`` is assigned and configured for this group, new cobbler profile is created.
+For example, when system group [literal]``B0001`` is created and [systemitem]``Saltboot group formula`` is assigned and configured for this group, new {cobbler} profile is created.
 
 ----
 # cobbler list
