--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -104,24 +104,24 @@ zypper in pxe-yomi-image-opensuse15
 
 endif::[]
 
-When you have the package installed, you can register Yomi in Cobbler.
+When you have the package installed, you can register Yomi in {cobbler}.
 
 
 
-== Register Yomi in Cobbler
+== Register Yomi in {cobbler}
 
-{productname} uses Cobbler to manage the PXE boot service, so you will need to register the image in Cobbler.
+{productname} uses {cobbler} to manage the PXE boot service, so you will need to register the image in {cobbler}.
 
 
 
-.Procedure: Registering the Yomi Image in Cobbler
+.Procedure: Registering the Yomi Image in {cobbler}
 
 . On the {productname} Server, at the command prompt, as root, create a directory for the Yomi image:
 +
 ----
 mkdir /srv/tftpboot/pxe-yomi-image
 ----
-. Define a distribution in Cobbler, including the path to install the second stage kernel and initrd, the location of the full image, and any further kernel options.
+. Define a distribution in {cobbler}, including the path to install the second stage kernel and initrd, the location of the full image, and any further kernel options.
     Adjust this command to include the correct version of the product, and the TFTP server address:
 +
 
@@ -149,20 +149,20 @@ cobbler distro add \
 endif::[]
 
 By default, the ``salt-minion`` service in ``pxe-yomi-image`` is configured to find the Salt master under the ``salt`` address.
-If the DNS server is not able to resolve this address, you need to adjust the ``kernel-options`` parameter from the Cobbler command that register the distribution, and add a new kernel command line of ``ym.master=master_address``.
+If the DNS server is not able to resolve this address, you need to adjust the ``kernel-options`` parameter from the {cobbler} command that register the distribution, and add a new kernel command line of ``ym.master=master_address``.
 This will override the default configuration for the ``salt-minion``.
 
 
-.Procedure: Registering the Yomi Profile in Cobbler
+.Procedure: Registering the Yomi Profile in {cobbler}
 
-. On the {productname} Server, at the command prompt, as root, define a profile in Cobbler based on the image.
+. On the {productname} Server, at the command prompt, as root, define a profile in {cobbler} based on the image.
 +
 ----
 cobbler profile add \
   --name pxe-yomi-profile \
   --distro=pxe-yomi-image
 ----
-. OPTIONAL: Create a system in Cobbler.
+. OPTIONAL: Create a system in {cobbler}.
     If you know the MAC address for the new client to be provisioned, you can have it boot directly from the Yomi image.
 +
 ----
@@ -171,7 +171,7 @@ cobbler system add \
    --mac=00:11:22:33:44:55 \
    --profile=pxe-yomi-profile
 ----
-. When the new node has been provisioned, remove the temporary Cobbler system:
+. When the new node has been provisioned, remove the temporary {cobbler} system:
 +
 ----
 cobbler system remove --name=yomi
@@ -188,7 +188,7 @@ The pillar is defined using the formulas with forms.
 In this example, we prepare the pillar for a minimal openSUSE Tumbleweed installation.
 You can find examples for {sle} in the example directory [path]``/usr/share/yomi/pillar/``.
 
-To begin, boot the client that you want to provision using the Yomi PXE boot image, using the Cobbler procedures described earlier in this section.
+To begin, boot the client that you want to provision using the Yomi PXE boot image, using the {cobbler} procedures described earlier in this section.
 
 When the ``salt-minion`` service is running on the new client, accept the key by navigating to menu:Salt[Keys].
 When the key is accepted, you can view and manage the client by navigating to menu:Systems[Overview].
