--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -13,16 +13,16 @@ In all cases, you use the resulting image to burn a CD-ROM or prepare a USB key.
 
 
 [[build-iso-with-cobbler]]
-== Build an ISO Image With {cobbler
+== Build an ISO Image With {cobbler}
 
-Cobbler can create ISO boot images that contain a set of distributions, kernels, and a menu that works in a similar way to a PXE installation.
+{cobbler} can create ISO boot images that contain a set of distributions, kernels, and a menu that works in a similar way to a PXE installation.
 
 [NOTE]
 ====
-Building ISOs with Cobbler is not supported on {ibmz}.
+Building ISOs with {cobbler} is not supported on {ibmz}.
 ====
 
-In order to prepare an ISO image with Cobbler, you need to prepare a distribution and a profile, similar to using network boot over PXE.
+In order to prepare an ISO image with {cobbler}, you need to prepare a distribution and a profile, similar to using network boot over PXE.
 For information about creating a distribution, see xref:client-configuration:autoinst-distributions.adoc[Autoinstallable Distributions].
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
